--- a/PostgreSQL_descriptive_analysis.ipynb
+++ b/PostgreSQL_descriptive_analysis.ipynb
@@ -2571,7 +2571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q1: What is the most commo film category?"
+    "Q1: What is the most common film category?"
    ]
   },
   {
@@ -2900,7 +2900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q3: Search films of which title contains \"Christmas\"."
+    "Q3: Search for films whose titles contain \"Christmas\"."
    ]
   },
   {
@@ -2988,7 +2988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q4: Search films of which description contains \"dog\"."
+    "Q4: Search for films whose description contains \"dog\"."
    ]
   },
   {
